@@ -1,3 +1,12 @@
+2017-07-11  Brent Fulgham  <bfulgham@apple.com>
+
+        Unreviewed clean-up after r219323
+
+        Simplify algorithm slightly based on a suggestion Chris Dumez made in the review.
+
+        * UIProcess/WebResourceLoadStatisticsStore.cpp:
+        (WebKit::pruneResources): Don't create a second variable to track the pruning operation.
+
 2017-07-11  Alex Christensen  <achristensen@webkit.org>
 
         SharedBuffer::size should return a size_t
